--- a/index.html
+++ b/index.html
@@ -11,27 +11,32 @@
 </head>
 
 <body>
-  <div class="bluish" id="qa-block">
-    <div class="yellowish">
-      <div class="box">In programming languages, a closure is a technique for implementing lexically
+  <div class="bluish-box box" id="qa-block">
+    <div class="yellowish-box box">
+      <div class="greyish-box box">
+        In programming languages, a closure is a technique for implementing lexically
         scoped name binding in a language with first-class functions. Operationally, a
-        closure is a record storing a function together with an environment.</div>
+        closure is a record storing a function together with an environment.
+      </div>
     </div>
   </div>
-  <div class="bluish">
-    <div class="yellowish">
-      <div class="box">У програмуванні замиканням називають підпрограму, що виконується в середовищі,
+  <div class="bluish-box box">
+    <div class="yellowish-box box">
+      <div class="greyish-box box">
+        У програмуванні замиканням називають підпрограму, що виконується в середовищі,
         яке містить одну або більше зв’язаних змінних. Підпрограма має доступ до цих
-        змінних під час виконання.</div>
+        змінних під час виконання.
+      </div>
     </div>
   </div>
-  <div class="bluish">
-    <div class="yellowish">
-      <div class="box">Замыкание в программировании — функция первого класса, в теле которой
+  <div class="bluish-box box">
+    <div class="yellowish-box box">
+      <div class="greyish-box box">
+        Замыкание в программировании — функция первого класса, в теле которой
         присутствуют ссылки на переменные, объявленные вне тела этой функции в
-        окружающем коде и не являющиеся её параметрами.</div>
+        окружающем коде и не являющиеся её параметрами.
+      </div>
     </div>
   </div>
 </body>
-
 </html>
